--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
     <title>Pison Group | Human Capital Development | Africa</title>
     <meta name="description" content="Pison Group is Africa's leading human capital development ecosystem. Unlocking human potential. Building systems. Shaping Africa's future." />
     <meta name="author" content="Pison Group" />
